fix: make visibility hidden instead

--- a/source/sass/utility/_preloader.scss
+++ b/source/sass/utility/_preloader.scss
@@ -72,7 +72,7 @@
     color: transparent;
 
     &.u-preloader--exclude {
-      display: none !important;
+      visibility: hidden !important;
     }
 
     &:after,
